--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: sakula.necirly.ml, port: 443, type: trojan, password: f1f68ae758, sni: sakula.necirly.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32003, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.87MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇯🇵 日本-5.36MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: zh01lv5ca03.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 台湾-2.15MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-3.14MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 96abb4d5-d709-40bd-9933-58f57b67c641, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
   - {name: 🇨🇳 中国-4.38MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: azhk.r.optage.moe, port: 44612, type: trojan, password: e9561799-2eee-47c5-a384-fc369f0eb792, sni: azhk.r.optage.moe, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-317.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
