--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.31MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.30MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.60MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: 523hk2.fans8.xyz, port: 443, type: trojan, password: 96abb4d5-d709-40bd-9933-58f57b67c641, sni: 523hk2.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.95MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.95MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
